--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-h2{
-    color: blueviolet;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.font-inter {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
 }
