--- a/style.css
+++ b/style.css
@@ -7,3 +7,43 @@
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
 }
+/* shared styles */
+
+.btn {
+    background-color: #30B868;
+    border: none;
+    padding: 12px 16px;
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+}
+
+
+header{
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+nav{
+    width: 85%;
+    max-width: 1360px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav .menu {
+    display: flex;
+    list-style-type: none;
+    gap: 32px;
+    align-items: center;
+}
+nav .menu a {
+    font-size: 16px;
+    color: #000000;
+    text-decoration: none;
+    
+}
+nav .menu a:hover {
+    color: #30B868;
+}
