--- a/style.css
+++ b/style.css
@@ -328,6 +328,9 @@ padding: 80px 20px;
     padding: 100px 20px;
     background-color: #f5f5f5;
     text-align: center;
+    width: 1100px;
+    margin: 50px auto 120px;
+    border-radius: 12px;
 }
 
 .early-access-container {
